@@ -1,38 +1,29 @@
-# @(#)$Ident: Build.PL 2013-08-07 10:09 pjf ;
+# @(#)$Ident: DZ_Build.PL 2013-08-15 13:04 pjf ;
 
 use strict;
 use warnings;
-use inc::Bob; # Module::Build subclass
-use version; our $VERSION = qv( sprintf '0.19.%d', q$Rev: 2 $ =~ /\d+/gmx );
 
-Bob->new( {
-   module    => 'File::Gettext',
-   home_page => 'http://www.roxsoft.co.uk',
-   requires  => {
-      'perl'             => 5.010001,
-      'namespace::sweep' => 0.006,
-      'Class::Method::ModifiersX::Augment' => 0.001,
-      'Date::Format'     => 2.22,
-      'Encode'           => 2.12,
-      'File::DataClass'  => q(0.22.0),
-      'Moo'              => 1.002,
-      'Try::Tiny'        => 0.09,
-      'Type::Tiny'       => 0.008,  },
-   recommends            => {
-      'App::cpanminus'   => 1.6005, },
-   configure_requires    => {
-      'version'          => 0.88,
-      'Module::Build'    => 0.4004, },
-   build_requires        => {
-      'version'          => 0.88,
-      'File::DataClass'  => q(0.22.0),
-      'Module::Build'    => 0.4004,
-      'Text::Diff'       => 1.37,   },
-} )->create_build_script; # Goal!
+use Module::Build;
 
-# Local Variables:
-# eval: (load-project-state "file-gettext")
-# mode: perl
-# tab-title: File::Gettext
-# tab-width: 3
-# End:
+sub whimper { print {*STDOUT} $_[ 0 ]."\n"; exit 0 }
+
+my $perl_ver = ##{ $meta2{prereqs}->{runtime}->{requires}->{perl} ##};
+my $name     = '##{ $zilla->name ##}'; $name =~ s{ - }{::}gmx;
+
+$] >= $perl_ver or $ENV{PERL5_CPANPLUS_IS_VERSION}
+   or whimper "Minimum required Perl version is ${perl_ver}";
+
+Module::Build->subclass( code => do { local $/; <DATA> } )->new(
+  'module_name' => $name,
+  'notes'       => { min_perl_version => $perl_ver },
+##{ $plugin->get_prereqs( 1 ) ##}
+##{ $plugin->get_default('share_dir') ##}
+)->create_build_script;
+
+exit 0;
+
+__DATA__
+
+sub _normalize_prereqs { # Dynamic config
+   my $self = shift; my $p = $self->SUPER::_normalize_prereqs; return $p;
+}
