@@ -22,8 +22,9 @@
 ^MYMETA\.json$
 ^MYMETA\.yml$
 ^README\.md$
+^README\.mkdn$
 ^README\.textile$
-^SIGNATURE$
+#^SIGNATURE$
 ^Debian_CPANTS.txt$
 ^nytprof/
 ^nytprof.out$
