@@ -1,0 +1,73 @@
+; @(#)$Ident: dist.ini 2013-08-15 17:00 pjf ;
+
+name              = File-Gettext
+abstract          = Read and write GNU gettext po/mo files
+author            = Peter Flanigan <pjfl@cpan.org>
+copyright_holder  = Peter Flanigan
+license           = Perl_5
+main_module       = lib/File/Gettext.pm
+
+[Prereqs]
+perl              = 5.010001
+namespace::sweep  = 0.006
+Class::Method::ModifiersX::Augment = 0.001
+Date::Format      = 2.22
+Encode            = 2.12
+File::DataClass   = v0.22.0
+Moo               = 1.002
+Try::Tiny         = 0.09
+Type::Tiny        = 0.008
+
+[Prereqs / ConfigureRequires]
+version           = 0.88
+Module::Build     = 0.4004
+
+[Prereqs / BuildRequires]
+version           = 0.88
+File::DataClass   = v0.22.0
+Module::Build     = 0.4004
+Text::Diff        = 1.37
+
+[MarkdownInRoot::WithMetaLinks]
+filename          = README.md
+
+[Meta::Dynamic::Config]
+
+[MetaNoIndex]
+directory         = examples
+directory         = inc
+directory         = share
+directory         = t
+
+[MetaProvides::Package]
+inherit_version   = 0
+meta_noindex      = 1
+
+[MetaResources]
+license           = http://dev.perl.org/licenses/
+homepage          = https://metacpan.org/author/PJFL
+bugtracker.web    = http://rt.cpan.org/NoAuth/Bugs.html?Dist=File-Gettext
+bugtracker.mailto = bug-File-Gettext@rt.cpan.org
+;repository.url   = git://github.com/pjfl/File-Gettext.git
+;repository.web   = http://github.com/pjfl/File-Gettext
+;repository.type  = git
+
+; So apparently order matters
+[ReadmeAnyFromPod]
+[Signature]
+[GatherDir]
+[VersionFromModule]
+[ModuleBuild::Custom]
+[License]
+[MetaJSON]
+[MetaYAML]
+[ManifestInRoot]
+[ManifestSkip]
+
+; Local Variables:
+; mode: conf-windows
+; eval: (load-project-state "file-gettext")
+; tab-title: Gettext
+; tab-width: 3
+; End:
+; vim: expandtab shiftwidth=3:
