@@ -3,7 +3,7 @@
 package File::Gettext::Storage::MO;
 
 use namespace::sweep;
-use version; our $VERSION = qv( sprintf '0.19.%d', q$Rev: 1 $ =~ /\d+/gmx );
+use version; our $VERSION = qv( sprintf '0.20.%d', q$Rev: 0 $ =~ /\d+/gmx );
 
 use Encode                     qw( decode );
 use File::DataClass::Constants;
@@ -148,7 +148,7 @@ File::Gettext::Storage::MO - Storage class for GNU gettext machine object format
 
 =head1 Version
 
-This documents version v0.19.$Rev: 1 $ of L<File::Gettext::Storage::MO>
+This documents version v0.20.$Rev: 0 $ of L<File::Gettext::Storage::MO>
 
 =head1 Synopsis
 
