@@ -3,7 +3,7 @@
 package File::Gettext::Storage::PO;
 
 use namespace::sweep;
-use version; our $VERSION = qv( sprintf '0.19.%d', q$Rev: 1 $ =~ /\d+/gmx );
+use version; our $VERSION = qv( sprintf '0.20.%d', q$Rev: 0 $ =~ /\d+/gmx );
 
 use Date::Format ();
 use Encode qw(decode encode);
@@ -423,7 +423,7 @@ File::Gettext::Storage::PO - Storage class for GNU Gettext portable object forma
 
 =head1 Version
 
-This documents version v0.19.$Rev: 1 $ of L<File::Gettext::Storage::PO>
+This documents version v0.20.$Rev: 0 $ of L<File::Gettext::Storage::PO>
 
 =head1 Synopsis
 
